tutorials/kubernetes_services_and_networking/clusterip_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: nginx
spec:
  selector:
    app: webapp
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
