tutorials/kubernetes_services_and_networking/loadbalancer_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: nginx
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  selector:
    app: webapp
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
