tutorials/kubernetes_services_and_networking/nodeport_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: nginx
spec:
  selector:
    app: webapp
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
