tutorials/kubernetes_services_and_networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: echo-server
            port:
              number: 80
